# game_sockets

./: .gitignore  Cargo.toml  LICENSE  README.md  run_full_suite.sh
benchmark_results/01_baseline/: gns.csv  gns.json  quic.csv  quic.json  tcp.json  udp.csv  udp.json
benchmark_results/02_latency_10ms/: gns.csv  gns.json  quic.csv  quic.json  tcp.csv  tcp.json  udp.csv  udp.json
benchmark_results/03_latency_30ms/: gns.csv  gns.json  quic.csv  quic.json  tcp.csv  tcp.json  udp.csv  udp.json
benchmark_results/04_latency_50ms/: gns.csv  gns.json  quic.csv  quic.json  tcp.csv  tcp.json  udp.csv  udp.json
benchmark_results/05_loss_1p/: gns.csv  gns.json  quic.json  tcp.json  udp.csv  udp.json
benchmark_results/06_loss_2p/: gns.csv  gns.json  quic.csv  quic.json  tcp.json  udp.csv  udp.json
benchmark_results/07_loss_5p/: gns.csv  gns.json  quic.csv  quic.json  tcp.csv  tcp.json  udp.csv  udp.json
benchmark_results/08_full_fiber/: gns.csv  gns.json  quic.csv  quic.json  tcp.json  udp.json
benchmark_results/09_full_good/: gns.csv  gns.json  quic.json  tcp.csv  tcp.json  udp.json
benchmark_results/10_full_bad/: gns.csv  gns.json  quic.csv  quic.json  tcp.csv  tcp.json  udp.json
benchmark_results/20260315_174603/: baseline_veth_latency.txt  system_info.txt
benchmark_results_bak/01_baseline/: quic.json  tcp.csv  tcp.json
benchmark_results_bak/02_latency_10ms/: quic.csv  tcp.csv  tcp.json
benchmark_results_bak/03_latency_30ms/: gns.csv  (+4 more)
scripts/: cleanup.sh  prepare_bench.sh  process_results.sh  run_full_suite.sh  set_netem.sh  setup_netns.sh
src/: lib.rs
(+549 files in other folders)
