[package]
name = "game_sockets"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
quinn = { version = "0.11", features = ["rustls"] }
rustls = "0.23"
game-networking-sockets = "0.1.2"
tracing = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
bytes = "1"